--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "next": "13.4.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "scss-reset": "^1.4.2",
     "typescript": "5.1.6"
   },
   "devDependencies": {
-    "prettier": "2.8.8"
+    "prettier": "2.8.8",
+    "sass": "^1.63.6"
   }
 }
